2009-01-21  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server/lib/PandoraFMS/Config.pm: Updated configuration
	  options.

2009-01-21  Sancho Leren <slerena@artica.es>

	* pandora_server_upgrade: Script to upgrade to latest version
	Pandora FMS server components / code.

	* bin/panora_network: Banner on load are rendered.

2009-01-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Take into account the alert option
	  'matches_value'.

	* bin/pandora_server: Added support for forced alert execution.

2009-01-20  Sancho Lerena <slerena@artica.es>

	* Config.pm: Now works without breaking the server :-). Show verbose info
	only when verbosity enabled (>4).
	
	* pandora_server: more issues with verbosity level. Fixed a typo on 
	management of async_proc moduletypes. Freeing a hash reference on keepalive
	solves a memleak.

	* DB.pm: Converting to the same float when comparing two numbers.
	
2009-01-20  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* lib/PandoraFMS/Config.pm: Commented 2 lines that broke the server

2009-01-20  Raul Mateos <raulofpandora@gmail.com>
	
	* lib/PandoraFMS/Config.pm: Changed some texts again.
	* Changelog: Changed last commit date.

2009-01-19  Sancho Lerena <slerena@artica.es>

	* pandora_wmi, pandora_plugin, pandora_recon: Updates merged from
	2.0 version. Different small fixes and improved performance.

	* DB.pm: Support for fixes in wmi/plugin server. Call of enterprise 
	function pandora_mcast_change_report() is done now on real status change
	code not in alert. Added update_on_error() function to update status table
	when remote modules cannot init (update last_try field to avoid unnecesary
	attempts).

	* Config.pm: Build update, some stuff cleaned. Server startup info is show
	only when verbose level is activated.
	
	* pandora_network: Startup messages are not shown if verbose < 5.

2009-01-16  Raul Mateos <raulofpandora@gmail.com>
	
	* lib/PandoraFMS/Config.pm: Updated Build and Headers.
	Changed some texts.
